--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title></title>
 </head>
 <body>
-  <input type="text" value="" placeholder="TODO">
-  <button>add</button>
+  <!-- <input type="text" value="" placeholder="TODO"> -->
+  <!-- <button>add</button> -->
 </body>
 </html>
